# alat

./: .bacon-locations  .gitattributes  .gitignore  .md  Cargo.toml  GEMINI.md  HOCON.md  LICENSE  QWEN.md  README.md  a.out  alat.md  codebook.toml  go.work  go.work.sum  manage.fish  mng  mng.fish  plan.md  qwen-code-export-2026-02-16T22-14-04-181Z.md  record_audio.fish
.github/: dependabot.yml
app/: Cargo.toml
app/src/: main.rs  ui.rs  utils.rs  worker.rs
app/ui/: app-window.slint  models.slint
apps/desktop/: .gitignore  autostart.go  config.go  go.mod  go.sum  icons.go  main.go  manage.fish  mng  mng.fish  nfpm.yaml  node.go  recording_20250907-222658.webm  tray.go  wails.json
apps/desktop/app/: app.go  bindings.go  clipcontrol.go  config.go  connected.go  dashboard.go  device.go  init.go  menu.go  pair.go  rcfile.go  sendfiles.go  server.go  services.go  settings.go  status.go  sysinfo.go  webshare.go
apps/desktop/app/config/: config.go  node.go  pair.go  settings.go  util.go
apps/desktop/frontend/: package.json  package.json.md5  svelte.config.js  vite.config.ts
apps/desktop/frontend/messages/: fr-cm.json
apps/desktop/frontend/project.inlang/: project_id  settings.json
apps/desktop/frontend/src/: alat.css  app.css  app.html  color-fixer.js  hook.client.ts  hooks.client.ts  theme.css
apps/desktop/frontend/static/: global.css  w3pro.css
apps/desktop/logos/: cmd.fish
apps/mobile/: GEMINI.md  MODIFICATION_DESIGN.md  README.md  flutter_launcher_icons.yaml  l10n.yaml  manage.fish  mng  mng.fish  pubspec.yaml
apps/mobile/android/: settings.gradle.kts
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: app.dart  main.dart  state.dart  theme.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
apps/server/: go.mod  main.go
apps/webshare/: package.json
lib/libalat/: async_pair.c  async_pair.go  async_pair.h  config.go  discovery.go  error.go  filetransfer.go  go.mod  go.sum  helpers.go  info.go  instance.go  libalat.go  mng  mng.fish  pair.go  services.go  settings.go  sysinfo.go  utils.go  webshare.go
logo/: logo.svgz
nlem/: Cargo.toml  build.rs
nlem/src/: alat.rs  discovery.rs  lib.rs  node.rs  platform.rs  proto.rs  security.rs  storage.rs
nlem/src/client/: error.rs  mod.rs
nlem/src/devicemanager/: connected.rs  discovered.rs  mod.rs  workers.rs
nlem/src/node/: mod.rs  services.rs
nlem/src/proto/: alat.proto  messages.proto  pair.proto  service.proto  telemetry.proto
nlem/src/server/: alat.rs  mod.rs  pair.rs
nlem/src/service/: config.rs  error.rs  mod.rs
nlem/src/service/clipboard/: mod.rs
nlem/src/service/pair/: mod.rs  server.rs
nlem/src/service/telemetry/: config.rs  info.rs  mod.rs  server.rs
nlem/src/storage/: certificate.rs  color.rs  deviceinfo.rs  devicetype.rs  error.rs  mod.rs  paireddevice.rs  yaml.rs
obsidian/: Device Certificate.md  Discovery Manager.md  Node.md  Paired Device.md  Peer Manager.md  Peer Storage.md  Server.md  Service Registery.md  Service.md
obsidian/.obsidian/: app.json  core-plugins.json  graph.json  webviewer.json  workspace.json
pkg/core/: address-phrase.go  core.go  device.go  go.mod  go.sum  services.md  windows_vm_guide.md
pkg/core/address/: address.go
pkg/core/client/: client.go  info.go  pair.go
pkg/core/config/: settings.go
pkg/core/connected/: connected.go  connections.go  sysinfo.go
pkg/core/device/: detail.go  device.go  info.go  peer.go  permission.go
pkg/core/discovery/: client.go  discoverer.go  discovery.go  server.go
pkg/core/node/: config.go  discovery.go  filesend.go  node.go  pair.go  services.go  status.go  sysinfo.go  worker.go
pkg/core/pair/: convert.go  event.go  pair.go  response.go  server.go
pkg/core/pbuf/: service.pb.go  types.pb.go
pkg/core/security/: certificate.go  pair.go  security.go
pkg/core/server/: config.go  info.go  pair.go  server.go
pkg/core/service/: registery.go  service.go
pkg/core/storage/: config.go  storage.go  yaml.go
pkg/core/transport/: pair.go  ping.go  transport.go
pkg/dalat/: go.mod
pkg/libalat/: go.mod  libalat.go  mng.fish  pair.go  storage.go
pkg/mobile_bridge/: bridge.go  go.mod
pkg/pbuf/: go.mod  go.sum  pair.pb.go  pair.proto  pair_grpc.pb.go
platform/: Cargo.toml
platform/src/: clipboard.rs  discovery.rs  lib.rs  platform.rs  storage.rs  telemetry.rs
proto/: service.proto  types.proto
(+178 files in other folders)
