[workspace]
resolver = "3"
members = ["app", "nlem", "platform"]

[workspace.package]
authors = ["Engon Ken Morel <engonken8@gmail.com>"]
documentation = "https://alat.rbs.cm"


[workspace.dependencies]
tokio = { version = "1.49.*", features = [
  "net",
  "sync",
  "rt-multi-thread",
  "macros",
  "time",
] }

[profile.dev]
opt-level = 1
