[package]
name = "app"
version = "0.1.0"
edition = "2021"
description = "Alat cross-platform application"
authors.workspace = true
documentation.workspace = true


[dependencies]
slint = "1.14.1"
platform = { path = "../platform" }
nlem = { path = "../nlem" }

[build-dependencies]
slint-build = "1.14.1"
