[package]
name = "app"
version = "0.1.0"
edition = "2021"
description = "Alat cross-platform application"
authors.workspace = true
documentation.workspace = true


[dependencies]
slint = "1.*"
# slint 1.14.1
platform = { path = "../platform" }
nlem = { path = "../nlem" }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
# objc2-core-foundation = "0.3.1"

[build-dependencies]
slint-build = "1.*"
