[package]
name = "nlem"
version = "0.1.0"
edition = "2024"
authors.workspace = true
documentation.workspace = true
description = "Alat core"


[dependencies]
prost = { version = "0.14.3", features = ["derive"] }
prost-derive = "0.14.3"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.49.0"
tonic = "0.14.3"
tonic-prost = "0.14.3"

[build-dependencies]
prost-build = "0.14.3"
tonic-build = "0.14.3"
tonic-prost-build = "0.14.3"
